# Smart-FarmProject

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  rania1.glade  rania1.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  rania1  troupeau.c  troupeau.h  troupeau.txt  troupeaux.txt
src/.deps/: troupeau.Po
